# DCPP-Math

./: CMakeLists.txt
project/: CMakeLists.txt
project/include/math/: dcmath.h  grid.h  math.h  matrix.h  matrix.inl  matrixstacks.h  quaternion.h  quaternion.inl  rect.h  vector.h  vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
project/src/math/: matrixstacks.cpp
